# metasphere-agents

./: .gitignore  CHANGELOG.md  CLAUDE.md  DIRECTIVES.yaml  LICENSE  README.md  TRASH-FILES.md  bootstrap.meta.mdc  claude.md  install.sh  overview.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: session.md  team.md
.github/workflows/: bump-minor.yml  pytest.yml
.messages/: README.md
.messages/inbox/: msg-1775521173-70938.msg  msg-1775521226-72082.msg  msg-1775528521-39674.msg  msg-1775529724-91626.msg  msg-1775529764-99159.msg  msg-1775529772-1651.msg  msg-1775529781-3914.msg  msg-1775530046-67148.msg  msg-1775530375-89422.msg  msg-1775530663-98146.msg  msg-1775533888-75564.msg  msg-1775534092-88236.msg  msg-1775555052-1903.msg  msg-1775555060-1987.msg
.messages/outbox/: msg-1775520674-57278.msg  msg-1775520679-57614.msg  msg-1775520685-57951.msg  msg-1775521173-70938.msg  msg-1775526156-69320.msg  msg-1775526157-69393.msg  msg-1775528521-39674.msg  msg-1775528522-40001.msg  msg-1775529662-87587.msg  msg-1775529662-87623.msg  msg-1775529663-87659.msg  msg-1775529663-87731.msg  msg-1775529717-91054.msg  msg-1775529764-99191.msg  msg-1775529925-43911.msg  msg-1775530081-69498.msg  msg-1775530222-80707.msg  msg-1775530959-6025.msg  msg-1775533017-48219.msg  msg-1775533853-71183.msg  msg-1775537412-9691.msg  msg-1775537975-38355.msg
.metasphere/: project.json
.tasks/: README.md
.tasks/active/: add-ack-reaction-when-orchestrator-finishes-responding-to-a-.md  architectural-restriction-root-orchestrator-delegate-only-20260406.md  audit-agent-ephemerality--cleanup-20260406.md  auto-update-mechanism-for-distributed-agents-20260406.md  configurable-auto-updates-scheduled-metasphere-update-job-fo.md  fix-metasphere-daemon-status-accuracy-20260406.md  fix-tasks-slug-sanitization-for-slash-chars-20260406.md  fractal-spawning-any-agent-can-spawn-sub-agents-20260406.md  installsh-stopdisablemask-metasphere-telegramservice-when-ga.md  make-agent-tree-actually-look-like-a-tree-20260406.md  memory-consolidation-v3-scan-learningsmd-daily-logs-for-stal.md  metasphere-chat-attach-tmux-to-orchestrator-session-20260406.md  metasphere-status-warn-when-metasphere-telegramservice-and-m.md  migrate-bean-vm-databasicboldde-to-metasphere-harness-reusin.md  migration-port-openclaw-cron-jobs-and-research-agents-to-metasphere-scheduling-system-20260407.md  (+7 more)
brain/: .gitignore  README.md  brain  cli.py  explore.py
core/: README.md
cutover/: README.md  apply.sh  rollback.sh
docs/: ARCHITECTURE.md  AUTO-UPDATE.md  BASH_TO_PY_PARITY.md  CLI.md  CLI_PORTING_STATUS.md  KNOWN_ISSUES.md  OPS.md  PHASE-B-MIGRATE-PROJECTS-LAYOUT.md  PORTING.md  PROJECTS.md  TASK_BACKLOG_AUDIT_2026-04-08.md  WINTERMUTE-mochi-install.md
metasphere/: __init__.py  agents.py  breadcrumbs.py  config.py  consolidate.py  contacts.py  context.py  directives.py  events.py  format.py  git_hooks.py  heartbeat.py  identity.py  io.py  messages.py  paths.py  posthook.py  project.py  schedule.py  session.py  specs.py  status.py  tasks.py  tmux.py  trace.py  update.py
recurse/: HEARTBEAT.md  LEARNINGS.md  MISSION.md  SOUL.md  persona-index.md
scripts/: README.md  messages  metasphere  metasphere-agent  metasphere-context  metasphere-events  metasphere-fts  metasphere-gateway  metasphere-git-hooks  metasphere-heartbeat  metasphere-identity  metasphere-migrate  metasphere-posthook  metasphere-project  metasphere-reaper  metasphere-schedule  metasphere-session  metasphere-spawn  metasphere-telegram  metasphere-telegram-groups  metasphere-telegram-stream  metasphere-tmux-submit  metasphere-trace  metasphere-wake  migrate_schedule_agent_ids.py  migrate_schedule_exit_self_flag.py  migrate_task_frontmatter.py  tasks  test_metasphere_reaper.sh
specs/: implementer.yaml  monitor.yaml  planner.yaml  researcher.yaml  reviewer.yaml
templates/: README.md  agent-harness.md
(+271 files in other folders)
